--- a/candy/package.json
+++ b/candy/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "sass-loader": "^7.1.0",
+    "vee-validate": "^2.1.7",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.7.0",
